Fixed issue of ingredient cards being hidden by pantry navbar on load

--- a/app/assets/stylesheets/components/_pantry_card.scss
+++ b/app/assets/stylesheets/components/_pantry_card.scss
@@ -7,6 +7,10 @@
   width: 100%;
 }
 
+.ingredients-index {
+  padding-top: 105px;
+}
+
 .ingredient-card {
   padding: 5px 12px;
   background-color: white;
